# pregrouting_prediction

./: .gitignore  LICENSE  Main_1.py  README.md  environment.yaml  library_1.py  pyproject.toml  requirements.txt
data/temporary/: methods_stations.csv  weather_stations.csv
src/: feature_selection.py  figures_styles.mplstyle  frost_data.py  hyperparameter_tuning.py  outlier_removal.py  plotting.py  plotting_lib.py  preprocessing.py  train_eval.py  utility.py
src/config/: best_params_extra_trees.yaml  best_params_extra_trees_rmse_Grouting_time.yaml  best_params_extra_trees_rmse_Total_grout_take.yaml  best_params_knn_rmse_Grouting_time.yaml  figures_styles.mplstyle
